--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<head lang="en" xmlns:th="http://www.thymeleaf.org">
   <meta charset="UTF-8">
   <title>Login Page | Amaze UI Example</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,7 +33,7 @@
 </div>
 <div class="am-g">
   <div class="am-u-lg-6 am-u-md-8 am-u-sm-centered">
-    <h2>登录</h2>
+    <h2 style="color: chocolate">登 录</h2>
     <hr>
    <!-- <div class="am-btn-group">
       <a href="#" class="am-btn am-btn-secondary am-btn-sm"><i class="am-icon-github am-icon-sm"></i> Github</a>
@@ -44,21 +43,21 @@
     <br>
     <br>
 
-    <form method="post" class="am-form" action="">
-      <label for="id">账号:</label>
-      <input type="text" name="" id="id" value="">
+    <form method="post" class="am-form"  action="/login">
+      <label for="username">账号:</label>
+      <input type="text" name="username" id="username" value="">
       <br>
       <label for="password">密码:</label>
-      <input type="password" name="" id="password" value="">
+      <input type="password" name="password" id="password" value="">
       <br>
-      <label for="remember-me">
-        <input id="remember-me" type="checkbox">
+      <label for="remember">
+        <input id="remember" type="checkbox" name="remember">
         记住密码
       </label>
       <br />
       <div class="am-cf">
         <input type="submit" name="" value="登 录" class="am-btn am-btn-primary am-btn-sm am-fl am-round">
-        <a ><input type="button" name="" value="注 册" class="am-btn am-btn-warning am-btn-sm am-fl am-round"></a>
+        <a href="/register"><input type="button"  value="注 册" class="am-btn am-btn-warning am-btn-sm am-fl am-round"></a>
         <a ><input type="button" name="" value="忘记密码 ^_^? " class="am-btn am-btn-default am-btn-sm am-fr am-round"></a>      </div>
     </form>
     <hr>
