基本完成登录注册

--- a/src/main/resources/templates/login-error.html
+++ b/src/main/resources/templates/login-error.html
@@ -97,7 +97,7 @@
       <div class="am-g">
         <div class="am-u-sm-12">
           <h2 class="am-text-center am-text-xxxl am-margin-top-lg">404. Not Found</h2>
-          <p class="am-text-center" th:text="">没有找到你要的页面</p>
+          <p class="am-text-center" >没有找到你要的页面</p>
         <pre class="page-404">
           .----.
        _.'__    `.
@@ -130,7 +130,7 @@
 
 <footer>
   <hr>
-  <p class="am-padding-left">© 2014 AllMobilize, Inc. Licensed under MIT license.</p>
+  <p class="am-padding-left">© 2019 AllMobilize, Inc. Licensed under MIT license.</p>
 </footer>
 
 <!--[if lt IE 9]>
