--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<head lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
+<head lang="en">
 	<meta charset="UTF-8">
 	<title>Login Page | Amaze UI Example</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -35,26 +36,21 @@
 	<div class="am-u-lg-6 am-u-md-8 am-u-sm-centered">
 		<h2 style="color: #23ccfe">注 册</h2>
 		<hr>
-		<!-- <div class="am-btn-group">
-		   <a href="#" class="am-btn am-btn-secondary am-btn-sm"><i class="am-icon-github am-icon-sm"></i> Github</a>
-		   <a href="#" class="am-btn am-btn-success am-btn-sm"><i class="am-icon-google-plus-square am-icon-sm"></i> Google+</a>
-		   <a href="#" class="am-btn am-btn-primary am-btn-sm"><i class="am-icon-stack-overflow am-icon-sm"></i> stackOverflow</a>
-		 </div>-->
 		<br>
 		<br>
 		
-		<form method="post" class="am-form"  action="/userinfo/register">
+		<form method="post" class="am-form"  action="/re">
 			<label for="name">真实姓名:</label>
-			<input type="text" name="name" id="name" value="">
+			<input type="text" name="name" id="name"  required>
 			<br>
 			<label for="password">密码:</label>
-			<input type="text" name="password" id="password" value="">
+			<input type="text" name="password" id="password"  required>
 			<br>
 			<label for="major">专业:</label>
-			<input type="text" name="major" id="major" value="">
+			<input type="text" name="major" id="major"  required>
 			<br>
 			<label for="classs">班级:</label>
-			<input type="text" name="classs" id="classs" value="">
+			<input type="text" name="classs" id="classs" required>
 			<br>
 			<label for="enrollmentYear">入学年份:</label>
 			<select  name="enrollmentYear" id="enrollmentYear">
@@ -113,25 +109,25 @@
 				<option value="2019">2019</option>
 				<option value="2020">2020</option>
 			</select>
-			<br>
+			<!--<br>
 			<label for="company">就业单位:</label>
 			<input type="text" name="company" id="company" value="">
 			<br>
 			<label for="city">城市:</label>
 			<input type="text" name="city" id="city" value="">
-			<br>
+			<br>-->
 			<label for="address">联系方式:</label>
-			<input type="text" name="address" id="address" value="">
+			<input type="text" name="address" id="address" value="" required>
 			<br>
-			<label for="email">Email:</label>
+			<!--<label for="email">Email:</label>
 			<input type="text" name="email" id="email" value="">
-			<br>
+			<br>-->
 			<div class="am-cf">
 				<input type="submit" name="" value="注册" class="am-btn am-btn-primary am-btn-sm am-fl am-round">
 				<a href="/login"><input type="button" name="" value="登陆 ^_^? " class="am-btn am-btn-default am-btn-sm am-fr am-round"></a>      </div>
 		</form>
 		<hr>
-		<p>© 2019 AllMobilize, Inc. Licensed under LIU license.</p>
+		<p>© 2019 AllMobilize, Inc. Licensed under MIT license.</p>
 	</div>
 </div>
 </body>
