完成登录注册（除记住）

--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -121,10 +121,10 @@
 <div class="get">
   <div class="am-g">
     <div class="am-u-lg-12">
-      <h1 class="get-title" th:text="${message}"></h1>
+      <h1 class="get-title" th:text="${status}"></h1>
 
-      <p>
-        以上是你的账号，请务必记住！！！
+      <p th:text="${tip}">
+      
       </p>
 
       <p>
