--- a/src/main/resources/templates/admin-index.html
+++ b/src/main/resources/templates/admin-index.html
@@ -51,7 +51,7 @@
   <div class="admin-sidebar am-offcanvas" id="admin-offcanvas">
     <div class="am-offcanvas-bar admin-offcanvas-bar">
       <ul class="am-list admin-sidebar-list">
-        <li><a href="admin-index.html"><span class="am-icon-home"></span> 首页</a></li>
+        <li><a href="/admin"><span class="am-icon-home"></span> 首页</a></li>
         <li class="admin-parent">
           <a class="am-cf" data-am-collapse="{target: '#collapse-nav'}"><span class="am-icon-file"></span> 页面模块 <span class="am-icon-angle-right am-fr am-margin-right"></span></a>
           <ul class="am-list am-collapse admin-sidebar-sub am-in" id="collapse-nav">
@@ -125,19 +125,10 @@
 <!--<![endif]-->
 <script src="/assets/js/amazeui.min.js"></script>
 <script src="/assets/js/app.js"></script>
+<script src="/assets/js/Util.js"></script>
 <script>
   
-  //转换时间格式
-  function timestampToTime(timestamp) {
-    var date = new Date(timestamp); //时间戳为10位需*1000，时间戳为13位的话不需乘1000
-    var Y = date.getFullYear() + '-';
-    var M = (date.getMonth()+1 < 10 ? '0'+(date.getMonth()+1) : date.getMonth()+1) + '-';
-    var D = date.getDate() + ' ';
-    var h = date.getHours() + ':';
-    var m = date.getMinutes() + ':';
-    var s = date.getSeconds();
-    return Y+M+D+" "+h+m+s;
-  }
+  
   
   //获取用户信息
   function getUser(tip) {
