--- a/src/main/resources/templates/admin-index.html
+++ b/src/main/resources/templates/admin-index.html
@@ -156,7 +156,7 @@
           var times=data[i].loginTimes;
         
           showUser+=
-                  '            <tr><td>'+id+'</td><td>'+name+'</td><td><a href="#">'+reTime+'</a></td><td>'+loTime+'</td><td><span class="am-badge am-badge-success">'+times+'</span></td>\n' +
+                  '            <tr><td>'+id+'</td><td>'+name+'</td><td>'+reTime+'</td><td>'+loTime+'</td><td><span class="am-badge am-badge-success">'+times+'</span></td>\n' +
 /*                  '              <td>\n' +
                   '                <div class="am-dropdown" data-am-dropdown>\n' +
                   '                  <button class="am-btn am-btn-default am-btn-xs am-dropdown-toggle" data-am-dropdown-toggle><span class="am-icon-cog"></span> <span class="am-icon-caret-down"></span></button>\n' +
