--- a/src/main/resources/templates/admin-table.html
+++ b/src/main/resources/templates/admin-table.html
@@ -190,165 +190,171 @@
   function getUserOfTable(tip,init) {
 	   
 
-      var num;
-      $.ajax({
-
+      var num=0;
+      
+    /*  $.ajax({
           type:'POST',
           url:'/user/'+tip+'/num',
           async:'false',
           success:function (data) {
               num = data;
-              console.info("num::"+num);
-          }
+              console.info("num::"+num);*/
+  
+            $.ajax({
+    
+              type:'POST',
+              url:'/user/'+tip,
+              dataType:'JSON',
+              async:'false',
+              data:{
+                'pageNumber':init,
+                'pageSize':15
+              },
+              success:function (data) {
+      
+                var obj = data;
+                
+                var s='<form class="am-form">\n' +
+                        '            <table class="am-table am-table-striped am-table-hover table-main">\n' +
+                        '              <thead>\n' +
+                        '              <tr>\n' +
+                        '                <th class="table-check"><input type="checkbox" /></th><th class="table-id">ID</th><th class="table-title">用户名</th><th class="table-type">状态</th><th class="table-author am-hide-sm-only">注册时间</th><th class="table-date am-hide-sm-only">登录次数</th><th class="table-set">操作</th>\n' +
+                        '              </tr>\n' +
+                        '              </thead>\n' +
+                        '              <tbody>\n';
+                console.info("data:::",data);
+      
+                for (var i in obj) {
+        
+                  ++num;
+                  var id=data[i].username;
+                  var name=data[i].name;
+                  var reTime=timestampToTime(data[i].registerTime);
+                  var loTime=data[i].loginTime==null?"未登录":timestampToTime(data[i].loginTime);
+                  var times=data[i].loginTimes;
+                  var disabled=data[i].enabled;
+                  var locked=data[i].locked;
+        
+                  var status;
+        
+                  console.info("tip:::",tip);
+        
+                  if (tip=='normal') {
+          
+                    console.info("normal::正常用户",name);
+                    status = "正常";
+                    s+='          <tr>\n' +
+                            '                <td><input type="checkbox" /></td>\n' +
+                            '                <td>'+id+'</td>\n' +
+                            '                <td>'+name+'</td>\n' +
+                            '                <td>'+status+'</td>\n' +
+                            '                <td class="am-hide-sm-only">'+reTime+'</td>\n' +
+                            '                <td class="am-hide-sm-only">'+times+'</td>\n' +
+                            '                <td>\n' +
+                            '                  <div class="am-btn-toolbar">\n' +
+                            '                    <div class="am-btn-group am-btn-group-xs">\n' +
+                            '                      <button class="am-btn am-btn-default am-btn-xs am-text-secondary"><span class="am-icon-pencil-square-o"></span> 禁用用户</button>\n' +
+                            '                      <button class="am-btn am-btn-default am-btn-xs am-hide-sm-only"><span class="am-icon-copy"></span> 查看用户</button>\n' +
+                            '                    </div>\n' +
+                            '                  </div>\n' +
+                            '                </td>\n' +
+                            '              </tr>\n';
+                  }
+                  else if (tip==='disabled') {
+                    status = "审核中";
+                    s+='          <tr>\n' +
+                            '                <td><input type="checkbox" /></td>\n' +
+                            '                <td>'+id+'</td>\n' +
+                            '                <td>'+name+'</td>\n' +
+                            '                <td>'+status+'</td>\n' +
+                            '                <td class="am-hide-sm-only">'+reTime+'</td>\n' +
+                            '                <td class="am-hide-sm-only">'+times+'</td>\n' +
+                            '                <td>\n' +
+                            '                  <div class="am-btn-toolbar">\n' +
+                            '                    <div class="am-btn-group am-btn-group-xs">\n' +
+                            '                      <button class="am-btn am-btn-default am-btn-xs am-text-secondary"><span class="am-icon-pencil-square-o"></span> 审核通过</button>\n' +
+                            '                      <button class="am-btn am-btn-default am-btn-xs am-hide-sm-only"><span class="am-icon-search-minus"></span> 查看用户</button>\n' +
+                            '                      <button class="am-btn am-btn-default am-btn-xs am-text-danger am-hide-sm-only"><span class="am-icon-trash-o"></span> 删除用户</button>\n' +
+                            '                    </div>\n' +
+                            '                  </div>\n' +
+                            '                </td>\n' +
+                            '              </tr>\n';
+                  }
+                  else if (tip=='locked'){
+          
+                    status="被禁用";
+          
+                    s+='          <tr>\n' +
+                            '                <td><input type="checkbox" /></td>\n' +
+                            '                <td>'+id+'</td>\n' +
+                            '                <td>'+name+'</td>\n' +
+                            '                <td>'+status+'</td>\n' +
+                            '                <td class="am-hide-sm-only">'+reTime+'</td>\n' +
+                            '                <td class="am-hide-sm-only">'+times+'</td>\n' +
+                            '                <td>\n' +
+                            '                  <div class="am-btn-toolbar">\n' +
+                            '                    <div class="am-btn-group am-btn-group-xs">\n' +
+                            '                      <button class="am-btn am-btn-default am-btn-xs am-text-secondary"><span class="am-icon-pencil-square-o"></span> 解除禁用</button>\n' +
+                            '                      <button class="am-btn am-btn-default am-btn-xs am-hide-sm-only"><span class="am-icon-copy"></span> 查看用户</button>\n' +
+                            '                    </div>\n' +
+                            '                  </div>\n' +
+                            '                </td>\n' +
+                            '              </tr>\n';
+                  }
+                  else {
+                    if (disabled==0)
+                      status="审核中";
+                    else if(locked==0)
+                      status="被禁用";
+                    else
+                      status="正常";
+          
+                    s+='          <tr>\n' +
+                            '                <td><input type="checkbox" /></td>\n' +
+                            '                <td>'+id+'</td>\n' +
+                            '                <td>'+name+'</td>\n' +
+                            '                <td>'+status+'</td>\n' +
+                            '                <td class="am-hide-sm-only">'+reTime+'</td>\n' +
+                            '                <td class="am-hide-sm-only">'+times+'</td>\n' +
+                            '                <td>\n' +
+                            '                  <div class="am-btn-toolbar">\n' +
+                            '                    <div class="am-btn-group am-btn-group-xs">\n' +
+                            '                      <button class="am-btn am-btn-default am-btn-xs am-hide-sm-only"><span class="am-icon-copy"></span> 查看用户</button>\n' +
+                            '                    </div>\n' +
+                            '                  </div>\n' +
+                            '                </td>\n' +
+                            '              </tr>\n';
+                  }
+                }
+      
+                s+= '              </tbody>\n' +
+                        '            </table>\n' +
+                        '            <div class="am-cf">\n' +
+                        '             <p ">共 '+num+' 条记录</p>\n' +
+                        '              <div class="am-fr">\n' +
+                        '                <ul class="am-pagination">\n' +
+                        '                  <li class="am-disabled"><a href="#">«</a></li>\n' +
+                        '                  <li class="am-active"><a href="#">1</a></li>\n' +
+                        '                  <li value=""><a href="#">2</a></li>\n' +
+                        '                  <li><a href="#">3</a></li>\n' +
+                        '                  <li><a href="#">4</a></li>\n' +
+                        '                  <li><a href="#">5</a></li>\n' +
+                        '                  <li><a href="#">»</a></li>\n' +
+                        '                </ul>\n' +
+                        '              </div>\n' +
+                        '            </div>\n' +
+                        '            <hr />\n' +
+                        '            <p>注：.....</p>\n' +
+                        '          </form>';
+      
+                $('#table-div').html(s);
+              }
+            });
+            
+      /*    }
       });
-      
-    $.ajax({
-      
-      type:'POST',
-      url:'/user/'+tip,
-      dataType:'JSON',
-      data:{
-        'pageNumber':init,
-        'pageSize':15
-      },
-      success:function (data) {
-        
-        var obj = data;
-        var s='<form class="am-form">\n' +
-                '            <table class="am-table am-table-striped am-table-hover table-main">\n' +
-                '              <thead>\n' +
-                '              <tr>\n' +
-                '                <th class="table-check"><input type="checkbox" /></th><th class="table-id">ID</th><th class="table-title">用户名</th><th class="table-type">状态</th><th class="table-author am-hide-sm-only">注册时间</th><th class="table-date am-hide-sm-only">登录次数</th><th class="table-set">操作</th>\n' +
-                '              </tr>\n' +
-                '              </thead>\n' +
-                '              <tbody>\n';
-        console.info("data:::",data);
-        
-        for (var i in obj) {
-  
-          var id=data[i].username;
-          var name=data[i].name;
-          var reTime=timestampToTime(data[i].registerTime);
-          var loTime=data[i].loginTime==null?"未登录":timestampToTime(data[i].loginTime);
-          var times=data[i].loginTimes;
-          var disabled=data[i].enabled;
-          var locked=data[i].locked;
-          
-          var status;
-          
-          console.info("tip:::",tip);
-          
-          if (tip=='normal') {
-            
-            console.info("normal::正常用户",name);
-            status = "正常";
-            s+='          <tr>\n' +
-                    '                <td><input type="checkbox" /></td>\n' +
-                    '                <td>'+id+'</td>\n' +
-                    '                <td>'+name+'</td>\n' +
-                    '                <td>'+status+'</td>\n' +
-                    '                <td class="am-hide-sm-only">'+reTime+'</td>\n' +
-                    '                <td class="am-hide-sm-only">'+times+'</td>\n' +
-                    '                <td>\n' +
-                    '                  <div class="am-btn-toolbar">\n' +
-                    '                    <div class="am-btn-group am-btn-group-xs">\n' +
-                    '                      <button class="am-btn am-btn-default am-btn-xs am-text-secondary"><span class="am-icon-pencil-square-o"></span> 禁用用户</button>\n' +
-                    '                      <button class="am-btn am-btn-default am-btn-xs am-hide-sm-only"><span class="am-icon-copy"></span> 查看用户</button>\n' +
-                    '                    </div>\n' +
-                    '                  </div>\n' +
-                    '                </td>\n' +
-                    '              </tr>\n';
-          }
-          else if (tip==='disabled') {
-            status = "审核中";
-            s+='          <tr>\n' +
-                    '                <td><input type="checkbox" /></td>\n' +
-                    '                <td>'+id+'</td>\n' +
-                    '                <td>'+name+'</td>\n' +
-                    '                <td>'+status+'</td>\n' +
-                    '                <td class="am-hide-sm-only">'+reTime+'</td>\n' +
-                    '                <td class="am-hide-sm-only">'+times+'</td>\n' +
-                    '                <td>\n' +
-                    '                  <div class="am-btn-toolbar">\n' +
-                    '                    <div class="am-btn-group am-btn-group-xs">\n' +
-                    '                      <button class="am-btn am-btn-default am-btn-xs am-text-secondary"><span class="am-icon-pencil-square-o"></span> 审核通过</button>\n' +
-                    '                      <button class="am-btn am-btn-default am-btn-xs am-hide-sm-only"><span class="am-icon-search-minus"></span> 查看用户</button>\n' +
-                    '                      <button class="am-btn am-btn-default am-btn-xs am-text-danger am-hide-sm-only"><span class="am-icon-trash-o"></span> 删除用户</button>\n' +
-                    '                    </div>\n' +
-                    '                  </div>\n' +
-                    '                </td>\n' +
-                    '              </tr>\n';
-          }
-          else if (tip=='locked'){
-  
-            status="被禁用";
-            
-            s+='          <tr>\n' +
-                    '                <td><input type="checkbox" /></td>\n' +
-                    '                <td>'+id+'</td>\n' +
-                    '                <td>'+name+'</td>\n' +
-                    '                <td>'+status+'</td>\n' +
-                    '                <td class="am-hide-sm-only">'+reTime+'</td>\n' +
-                    '                <td class="am-hide-sm-only">'+times+'</td>\n' +
-                    '                <td>\n' +
-                    '                  <div class="am-btn-toolbar">\n' +
-                    '                    <div class="am-btn-group am-btn-group-xs">\n' +
-                    '                      <button class="am-btn am-btn-default am-btn-xs am-text-secondary"><span class="am-icon-pencil-square-o"></span> 解除禁用</button>\n' +
-                    '                      <button class="am-btn am-btn-default am-btn-xs am-hide-sm-only"><span class="am-icon-copy"></span> 查看用户</button>\n' +
-                    '                    </div>\n' +
-                    '                  </div>\n' +
-                    '                </td>\n' +
-                    '              </tr>\n';
-          }
-          else {
-            if (disabled==0)
-              status="审核中";
-            else if(locked==0)
-              status="被禁用";
-             else
-               status="正常";
-  
-            s+='          <tr>\n' +
-                    '                <td><input type="checkbox" /></td>\n' +
-                    '                <td>'+id+'</td>\n' +
-                    '                <td>'+name+'</td>\n' +
-                    '                <td>'+status+'</td>\n' +
-                    '                <td class="am-hide-sm-only">'+reTime+'</td>\n' +
-                    '                <td class="am-hide-sm-only">'+times+'</td>\n' +
-                    '                <td>\n' +
-                    '                  <div class="am-btn-toolbar">\n' +
-                    '                    <div class="am-btn-group am-btn-group-xs">\n' +
-                    '                      <button class="am-btn am-btn-default am-btn-xs am-hide-sm-only"><span class="am-icon-copy"></span> 查看用户</button>\n' +
-                    '                    </div>\n' +
-                    '                  </div>\n' +
-                    '                </td>\n' +
-                    '              </tr>\n';
-          }
-        }
-        
-        s+= '              </tbody>\n' +
-                '            </table>\n' +
-                '            <div class="am-cf">\n' +
-                '             <p ">共 '+num+' 条记录</p>\n' +
-                '              <div class="am-fr">\n' +
-                '                <ul class="am-pagination">\n' +
-                '                  <li class="am-disabled"><a href="#">«</a></li>\n' +
-                '                  <li class="am-active"><a href="#">1</a></li>\n' +
-                '                  <li value=""><a href="#">2</a></li>\n' +
-                '                  <li><a href="#">3</a></li>\n' +
-                '                  <li><a href="#">4</a></li>\n' +
-                '                  <li><a href="#">5</a></li>\n' +
-                '                  <li><a href="#">»</a></li>\n' +
-                '                </ul>\n' +
-                '              </div>\n' +
-                '            </div>\n' +
-                '            <hr />\n' +
-                '            <p>注：.....</p>\n' +
-                '          </form>';
-  
-        $('#table-div').html(s);
-      }
-    });
+      */
+    
     
   
   }
