--- a/src/main/resources/templates/admin-index.html
+++ b/src/main/resources/templates/admin-index.html
@@ -53,14 +53,10 @@
       <ul class="am-list admin-sidebar-list">
         <li><a href="/admin"><span class="am-icon-home"></span> 首页</a></li>
         <li class="admin-parent">
-          <a class="am-cf" data-am-collapse="{target: '#collapse-nav'}"><span class="am-icon-file"></span> 页面模块 <span class="am-icon-angle-right am-fr am-margin-right"></span></a>
-          <ul class="am-list am-collapse admin-sidebar-sub am-in" id="collapse-nav">
-            <li><a href="admin-user.html" class="am-cf"><span class="am-icon-check"></span> 修改个人资料<span class="am-icon-star am-fr am-margin-right admin-icon-yellow"></span></a></li>
-            <li><a href="admin-log.html"><span class="am-icon-calendar"></span> 系统日志</a></li>
-          </ul>
+        <li class="admin-parent"><a class="am-cf" data-am-collapse="{target: '#collapse-nav'}"><span class="am-icon-file"></span> 修改个人资料 <span class="am-icon-angle-right am-fr am-margin-right"></span></a></li>
         </li>
         <li><a href="/admin/table"><span class="am-icon-table"></span> 表格</a></li>
-        <li><a href="admin-form.html"><span class="am-icon-pencil-square-o"></span> 表单</a></li>
+       <!-- <li><a href="admin-form.html"><span class="am-icon-pencil-square-o"></span> 表单</a></li>-->
         <li><a href="#"><span class="am-icon-sign-out"></span> 注销</a></li>
       </ul>
 
