--- a/src/main/resources/templates/user-index.html
+++ b/src/main/resources/templates/user-index.html
@@ -156,7 +156,7 @@
         $.ajax({
 			
 			type:'POST',
-			url:'/user/query',
+			url:'/userInfo/query/'+option,
             dataType:'JSON',
 			data:{
 			    "type":option,
@@ -167,7 +167,7 @@
                 var showUser='<table class="am-table am-table-bd am-table-striped admin-content-table">\n' +
                     '            <thead>\n' +
                     '            <tr>\n' +
-                    '              <th>ID</th><th>用户名</th><th>注册时间</th><th>最近登录</th><th>登陆次数</th>\n' +
+                    '              <th>ID</th><th>用户名</th><th>专业</th><th>手机号</th><th>入学年份</th>\n' +
                     '            </tr>\n' +
                     '            </thead>\n' +
                     '            <tbody>\n' ;
@@ -176,24 +176,13 @@
                 for (var i in obj){
                     var id=data[i].username;
                     var name=data[i].name;
-                    var reTime=timestampToTime(data[i].registerTime);
-                    var loTime=data[i].loginTime==null?"未登录":timestampToTime(data[i].loginTime);
-                    var times=data[i].loginTimes;
+                    var major=data[i].major;
+                    var address=data[i].address;
+                    var enYear=data[i].enrollmentYear;
 
                     showUser+=
-                        '            <tr><td>'+id+'</td><td>'+name+'</td><td>'+reTime+'</td><td>'+loTime+'</td><td><span class="am-badge am-badge-success">'+times+'</span></td>\n' +
-                        /*                  '              <td>\n' +
-										  '                <div class="am-dropdown" data-am-dropdown>\n' +
-										  '                  <button class="am-btn am-btn-default am-btn-xs am-dropdown-toggle" data-am-dropdown-toggle><span class="am-icon-cog"></span> <span class="am-icon-caret-down"></span></button>\n' +
-										  '                  <ul class="am-dropdown-content">\n' +
-										  '                    <li><a href="#">1. 编辑</a></li>\n' +
-										  '                    <li><a href="#">2. 下载</a></li>\n' +
-										  '                    <li><a href="#">3. 删除</a></li>\n' +
-										  '                  </ul>\n' +
-										  '                </div>\n' +
-										  '              </td>\n' +*/
+                        '            <tr><td>'+id+'</td><td>'+name+'</td><td>'+major+'</td><td>'+address+'</td><td><span class="am-badge am-badge-success">'+enYear+'</span></td>\n' +
                         '            </tr>\n';
-
                 }
 
                 showUser+=   '            </tbody>\n' +
